# lib-avstack-security

./: .gitignore  .gitmodules  Makefile  README.md  conftest.py  pyproject.toml
avsec/: __init__.py  config.py  utils.py
avsec/analyze/: __init__.py
avsec/attack/: __init__.py  types.py
avsec/attack/lidar/: __init__.py  attacker.py  executor.py  monitor.py  scheduler.py  utils.py
avsec/attack/lidar/configs/: false_positive_attacker.yaml
avsec/carla_trust/: selection.py
avsec/defend/: __init__.py  lidar.py
avsec/defend/lidar/: __init__.py
avsec/multi_agent/: __init__.py  adversary.py  hooks.py  manifest.py  propagation.py  target.py
avsec/partial_information/: utils.py
avsec/partial_information/analyze/: __init__.py
avsec/partial_information/attack/: attacker.py  executor.py  monitor.py  scheduler.py  utils.py
avsec/partial_information/defend/: __init__.py  lidar.py
tests/: test_analysis.py  test_defend.py  test_frustum_attack.py
tests/multi_agent/: test_adversary.py  test_manifest.py  test_propagation.py  test_target.py
tests/partial_information/: test_defend.py
