
[tool.poetry]
name = "lib-avstack-security"
version = "0.1.0-alpha.1"
description = "Security analysis routines for autonomous vehicles"
authors = ["Spencer Hallyburton <spencer.hallyburton@duke.edu>"]
readme = "README.md"
license = "MIT"
homepage = "https://cpsl.pratt.duke.edu/"
repository = "https://github.com/avstack-lab/lib-avstack-security"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
keywords = ["security", "perception", "autonomous vehicles"]
packages = [{include = "avsec"}]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.19"
scipy = "^1.8.0"

# avstack dependences
lib-avstack-core = { path = "third_party/lib-avstack-core", develop = true, optional=true}

[tool.poetry.extras]
avstack = ["lib-avstack-core", "lib-avstack-api"]

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
seaborn = "^0.12.2"

[tool.poetry.group.test.dependencies]
snakeviz="^2.1.1"
pytest = "^7"
pytest-cov = "^4"
bandit = "^1.7"
black = {extras = ["jupyter"], version = "~22.12.0"}
mypy = "^0"
isort = "^5.11"
flake8 = "^5.0"
autoflake = "^1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
